--- a/callAPI_in_weatherApp/style.css
+++ b/callAPI_in_weatherApp/style.css
@@ -1,87 +1,110 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box; 
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: sans-serif;
 }
 
 body {
-    font-family: sans-serif ;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items:center ;
-
-    background: linear-gradient(to top , rgba(0,0,0,0.8) , rgba(0,0,0,0.6)),url(./Photos/cold.png) no-repeat center/cover
+	height: 100vh;
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.weather {
-    width: 350px;
-    border-radius: 10px;
-    padding: 30px 20px ;
-    background: url(./Photos/cold.png) no-repeat center/cover;
+body.hot {
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1)),
+		url(./Photos/hot.png) no-repeat center/cover;
 }
 
-.searchCity {
-    width: 100%;
-    padding: 10px 20px ;
-    border:none;
-    outline: none;
-    background: rgba(255,255,255,0.3);
-    border-radius: 0px 15px 0 15px;
-    box-shadow: 0 5px 4px rgba(0,0,0,0.4);
-    transition: 0,4s;
-    font-size:19px
+body.hot #weather {
+	background-image: url(./Photos/hot.png);
 }
 
-.searchCity:focus{
-    background: rgba(255,255,255,0.7);
-    border-radius: 15px 0px 15px 0;
+body.cold {
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1)),
+		url(./Photos/cold.png) no-repeat center/cover;
 }
 
-.content {
-    text-align: center;
-    color: white;
-    margin:40px 0;
+body.cold #weather {
+	background-image: url(./Photos/cold.png);
 }
 
-.capital {
-    text-shadow: 2px 2px rgba(0,0,0,0.5);
+#weather {
+	min-width: 350px;
+	height: 600px;
+	background: no-repeat center/cover;
+	text-align: center;
+	padding: 30px 20px;
+	border-radius: 10px;
+	transition: 0.4s;
 }
 
-.time{
-    margin: 15px 0 ;
-    font-size: 15px;
-    text-align: center;
+#weather input {
+	padding: 10px 20px;
+	background-color: rgba(255, 255, 255, 0.4);
+	font-size: 19px;
+	box-shadow: 0 5px 4px rgba(0, 0, 0, 0.2);
+	border: none;
+	outline: none;
+	border-radius: 0px 15px 0 15px;
+	margin-bottom: 40px;
+	width: 100%;
+	transition: 0.4s;
 }
 
-.temperature {
-    font-size: 65px;
-    text-shadow: 4px 4px rgba(0,0,0,0.7);
-    background: rgba(255,255,255,0.3);
-    box-shadow: 4px 4px rgba(0,0,0,0);
-    border-radius: 10px;
-    margin: 0 30px;
-    padding: 20px ; 
+#weather input:focus {
+	background-color: rgba(255, 255, 255, 0.8);
+	border-radius: 15px 0 15px 0;
 }
 
-.short-desc {
-    font-size: 30px;
-    font-weight: bold;
-    margin : 30px ; 
+#weather .content {
+	color: white;
 }
 
-.more-desc {
-    display: flex;
-    justify-content: space-between;
+#weather .content .name {
+	white-space: nowrap;
+	font-size: 35px;
+	text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-.more-desc div {
-    display: flex;
-    flex-direction:column; 
-    padding : 5px;
+#weather .content .time {
+	font-size: 15px;
+	margin: 6px 0;
 }
 
-.more-desc div i {
-    margin: 5px 0 ; 
+#weather .content .temperature {
+	font-size: 65px;
+	text-shadow: 4px 4px rgba(0, 0, 0, 0.6);
+	display: inline-block;
+	padding: 20px;
+	background-color: rgba(255, 255, 255, 0.4);
+	border-radius: 15px;
+	box-shadow: 2px 2px 0 2px rgba(0, 0, 0, 0.5);
+	margin: 20px 0 30px;
+	font-weight: 800;
+}
 
+#weather .content .short-desc {
+	font-size: 40px;
+	font-weight: 600;
+	text-shadow: 3px 3px rgba(0, 0, 0, 0.4);
+}
+
+#weather .content .more-desc {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 40px;
+}
+
+#weather .content .more-desc > div {
+	font-size: 16px;
+	display: flex;
+	flex-direction: column;
+}
+
+#weather .content .more-desc > div span {
+	margin-top: 15px;
 }
